Factor out BaseAIScriptAction